// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PrivateAndSharedPipelines > it renders correctly in multi user mode 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="page_f1flacxk f1h5lfj6"
      >
        <div
          class="tabs_ff8rz57"
        >
          <div
            class="indicator_fp4eggn"
            style="left: -5px; width: 5px; display: block;"
          />
          <span
            style="display: inline-block; min-width: 20px; width: 20px;"
          />
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text button_ff2g68i active_fz0wpsl"
            tabindex="0"
            title="Only people who have access to this namespace will be able to view and use these pipelines."
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <span>
                Private
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text button_ff2g68i"
            tabindex="0"
            title="Everyone in your organization will be able to view and use these pipelines."
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <span>
                Shared
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="page_f1flacxk f9qqjqd"
        >
          <div
            class="pageOverflowHidden_f15djeb2"
          >
            <div>
              <div
                class="MuiFormControl-root MuiTextField-root filterBox_frxzdj2"
                spellcheck="false"
                style="height: 48px; max-width: 100%; width: 100%;"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root noMargin_fl8qkup MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
                  data-shrink="true"
                  for="tableFilterBox"
                  id="tableFilterBox-label"
                >
                  Filter pipelines
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root noLeftPadding_f106pxd4 MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
                >
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      style="color: rgb(128, 134, 139); padding-right: 16px;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                      />
                    </svg>
                  </div>
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
                    id="tableFilterBox"
                    type="text"
                    value=""
                  />
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-1 MuiOutlinedInput-notchedOutline filterBorderRadius_f1ypp5hy"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-3 PrivateNotchedOutline-legendNotched-4"
                    >
                      <span>
                        Filter pipelines
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="header_f15jqnss"
            >
              <div
                class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-8"
                      data-indeterminate="false"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  style="display: inline-block; min-width: 40px; width: 40px;"
                />
              </div>
              <div
                class="columnName_f1kdqshe"
                style="width: 20%;"
                title="Pipeline name"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
                  role="button"
                  tabindex="0"
                  title="Sort"
                >
                  Pipeline name
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="columnName_f1kdqshe"
                style="width: 60%;"
                title="Description"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
                  role="button"
                  tabindex="0"
                  title="Cannot sort by this column"
                >
                  Description
                </span>
              </div>
              <div
                class="columnName_f1kdqshe"
                style="width: 20%;"
                title="Uploaded on"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x MuiTableSortLabel-active"
                  role="button"
                  tabindex="0"
                  title="Sort"
                >
                  Uploaded on
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="scrollContainer_fea2b5v"
              style="min-height: 60px;"
            >
              <div
                class="expandableContainer_f1l0zr01"
              >
                <div
                  aria-checked="false"
                  class="tableRow row_f12b5y4d"
                  data-row-id="run-pipeline-id"
                  data-testid="table-row"
                  role="checkbox"
                  tabindex="-1"
                >
                  <div
                    class="cell_fy8nr2z selectionToggle_f1ds3nvo"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <input
                          class="PrivateSwitchBase-input-8"
                          data-indeterminate="false"
                          type="checkbox"
                          value=""
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </span>
                    <button
                      aria-label="Expand"
                      class="MuiButtonBase-root MuiIconButton-root expandButton_fcy5tjm"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M10 17l5-5-5-5v10z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <div
                    class="cell_fy8nr2z"
                    style="width: 20%;"
                  >
                    <a
                      class="link_f3dwag7"
                      href="/pipelines/details/run-pipeline-id"
                      title="Name: mock-pipeline-name"
                    >
                      mock pipeline name
                    </a>
                  </div>
                  <div
                    class="cell_fy8nr2z"
                    style="width: 60%;"
                  >
                    <span>
                      mock pipeline description
                    </span>
                  </div>
                  <div
                    class="cell_fy8nr2z"
                    style="width: 20%;"
                  >
                    9/21/2022, 1:53:59 PM
                  </div>
                </div>
              </div>
              <div
                class="expandableContainer_f1l0zr01"
              >
                <div
                  aria-checked="false"
                  class="tableRow row_f12b5y4d"
                  data-row-id="run-pipeline-id"
                  data-testid="table-row"
                  role="checkbox"
                  tabindex="-1"
                >
                  <div
                    class="cell_fy8nr2z selectionToggle_f1ds3nvo"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <input
                          class="PrivateSwitchBase-input-8"
                          data-indeterminate="false"
                          type="checkbox"
                          value=""
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </span>
                    <button
                      aria-label="Expand"
                      class="MuiButtonBase-root MuiIconButton-root expandButton_fcy5tjm"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M10 17l5-5-5-5v10z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <div
                    class="cell_fy8nr2z"
                    style="width: 20%;"
                  >
                    <a
                      class="link_f3dwag7"
                      href="/pipelines/details/run-pipeline-id"
                      title="Name: mock-pipeline-name"
                    >
                      mock pipeline name
                    </a>
                  </div>
                  <div
                    class="cell_fy8nr2z"
                    style="width: 60%;"
                  >
                    <span>
                      mock pipeline description
                    </span>
                  </div>
                  <div
                    class="cell_fy8nr2z"
                    style="width: 20%;"
                  >
                    9/21/2022, 1:53:59 PM
                  </div>
                </div>
              </div>
            </div>
            <div
              class="footer_f1fl9hjk"
            >
              <span
                class="fzbgmju"
              >
                Rows per page:
              </span>
              <div
                class="MuiFormControl-root MuiTextField-root verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp"
              >
                <div
                  class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
                >
                  <div
                    aria-haspopup="listbox"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                    role="button"
                    tabindex="0"
                  >
                    10
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    tabindex="-1"
                    value="10"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSelect-icon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                </div>
              </div>
              <button
                class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                    />
                  </svg>
                </span>
              </button>
              <button
                class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="page_f1flacxk f1h5lfj6"
    >
      <div
        class="tabs_ff8rz57"
      >
        <div
          class="indicator_fp4eggn"
          style="left: -5px; width: 5px; display: block;"
        />
        <span
          style="display: inline-block; min-width: 20px; width: 20px;"
        />
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text button_ff2g68i active_fz0wpsl"
          tabindex="0"
          title="Only people who have access to this namespace will be able to view and use these pipelines."
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span>
              Private
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text button_ff2g68i"
          tabindex="0"
          title="Everyone in your organization will be able to view and use these pipelines."
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span>
              Shared
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="page_f1flacxk f9qqjqd"
      >
        <div
          class="pageOverflowHidden_f15djeb2"
        >
          <div>
            <div
              class="MuiFormControl-root MuiTextField-root filterBox_frxzdj2"
              spellcheck="false"
              style="height: 48px; max-width: 100%; width: 100%;"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root noMargin_fl8qkup MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
                data-shrink="true"
                for="tableFilterBox"
                id="tableFilterBox-label"
              >
                Filter pipelines
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root noLeftPadding_f106pxd4 MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
              >
                <div
                  class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    style="color: rgb(128, 134, 139); padding-right: 16px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                    />
                  </svg>
                </div>
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
                  id="tableFilterBox"
                  type="text"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root-1 MuiOutlinedInput-notchedOutline filterBorderRadius_f1ypp5hy"
                >
                  <legend
                    class="PrivateNotchedOutline-legendLabelled-3 PrivateNotchedOutline-legendNotched-4"
                  >
                    <span>
                      Filter pipelines
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
          <div
            class="header_f15jqnss"
          >
            <div
              class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-8"
                    data-indeterminate="false"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
              <span
                style="display: inline-block; min-width: 40px; width: 40px;"
              />
            </div>
            <div
              class="columnName_f1kdqshe"
              style="width: 20%;"
              title="Pipeline name"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
                role="button"
                tabindex="0"
                title="Sort"
              >
                Pipeline name
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="columnName_f1kdqshe"
              style="width: 60%;"
              title="Description"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
                role="button"
                tabindex="0"
                title="Cannot sort by this column"
              >
                Description
              </span>
            </div>
            <div
              class="columnName_f1kdqshe"
              style="width: 20%;"
              title="Uploaded on"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x MuiTableSortLabel-active"
                role="button"
                tabindex="0"
                title="Sort"
              >
                Uploaded on
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="scrollContainer_fea2b5v"
            style="min-height: 60px;"
          >
            <div
              class="expandableContainer_f1l0zr01"
            >
              <div
                aria-checked="false"
                class="tableRow row_f12b5y4d"
                data-row-id="run-pipeline-id"
                data-testid="table-row"
                role="checkbox"
                tabindex="-1"
              >
                <div
                  class="cell_fy8nr2z selectionToggle_f1ds3nvo"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input-8"
                        data-indeterminate="false"
                        type="checkbox"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </span>
                  <button
                    aria-label="Expand"
                    class="MuiButtonBase-root MuiIconButton-root expandButton_fcy5tjm"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10 17l5-5-5-5v10z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <div
                  class="cell_fy8nr2z"
                  style="width: 20%;"
                >
                  <a
                    class="link_f3dwag7"
                    href="/pipelines/details/run-pipeline-id"
                    title="Name: mock-pipeline-name"
                  >
                    mock pipeline name
                  </a>
                </div>
                <div
                  class="cell_fy8nr2z"
                  style="width: 60%;"
                >
                  <span>
                    mock pipeline description
                  </span>
                </div>
                <div
                  class="cell_fy8nr2z"
                  style="width: 20%;"
                >
                  9/21/2022, 1:53:59 PM
                </div>
              </div>
            </div>
            <div
              class="expandableContainer_f1l0zr01"
            >
              <div
                aria-checked="false"
                class="tableRow row_f12b5y4d"
                data-row-id="run-pipeline-id"
                data-testid="table-row"
                role="checkbox"
                tabindex="-1"
              >
                <div
                  class="cell_fy8nr2z selectionToggle_f1ds3nvo"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input-8"
                        data-indeterminate="false"
                        type="checkbox"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </span>
                  <button
                    aria-label="Expand"
                    class="MuiButtonBase-root MuiIconButton-root expandButton_fcy5tjm"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10 17l5-5-5-5v10z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <div
                  class="cell_fy8nr2z"
                  style="width: 20%;"
                >
                  <a
                    class="link_f3dwag7"
                    href="/pipelines/details/run-pipeline-id"
                    title="Name: mock-pipeline-name"
                  >
                    mock pipeline name
                  </a>
                </div>
                <div
                  class="cell_fy8nr2z"
                  style="width: 60%;"
                >
                  <span>
                    mock pipeline description
                  </span>
                </div>
                <div
                  class="cell_fy8nr2z"
                  style="width: 20%;"
                >
                  9/21/2022, 1:53:59 PM
                </div>
              </div>
            </div>
          </div>
          <div
            class="footer_f1fl9hjk"
          >
            <span
              class="fzbgmju"
            >
              Rows per page:
            </span>
            <div
              class="MuiFormControl-root MuiTextField-root verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp"
            >
              <div
                class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
              >
                <div
                  aria-haspopup="listbox"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                  role="button"
                  tabindex="0"
                >
                  10
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  tabindex="-1"
                  value="10"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
            </div>
            <button
              class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                  />
                </svg>
              </span>
            </button>
            <button
              class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PrivateAndSharedPipelines > it renders correctly in single user mode 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="page_f1flacxk f9qqjqd"
      >
        <div
          class="pageOverflowHidden_f15djeb2"
        >
          <div>
            <div
              class="MuiFormControl-root MuiTextField-root filterBox_frxzdj2"
              spellcheck="false"
              style="height: 48px; max-width: 100%; width: 100%;"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root noMargin_fl8qkup MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
                data-shrink="true"
                for="tableFilterBox"
                id="tableFilterBox-label"
              >
                Filter pipelines
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root noLeftPadding_f106pxd4 MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
              >
                <div
                  class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    style="color: rgb(128, 134, 139); padding-right: 16px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                    />
                  </svg>
                </div>
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
                  id="tableFilterBox"
                  type="text"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root-9 MuiOutlinedInput-notchedOutline filterBorderRadius_f1ypp5hy"
                >
                  <legend
                    class="PrivateNotchedOutline-legendLabelled-11 PrivateNotchedOutline-legendNotched-12"
                  >
                    <span>
                      Filter pipelines
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
          <div
            class="header_f15jqnss"
          >
            <div
              class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-13 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-16"
                    data-indeterminate="false"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
              <span
                style="display: inline-block; min-width: 40px; width: 40px;"
              />
            </div>
            <div
              class="columnName_f1kdqshe"
              style="width: 20%;"
              title="Pipeline name"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
                role="button"
                tabindex="0"
                title="Sort"
              >
                Pipeline name
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="columnName_f1kdqshe"
              style="width: 60%;"
              title="Description"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
                role="button"
                tabindex="0"
                title="Cannot sort by this column"
              >
                Description
              </span>
            </div>
            <div
              class="columnName_f1kdqshe"
              style="width: 20%;"
              title="Uploaded on"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x MuiTableSortLabel-active"
                role="button"
                tabindex="0"
                title="Sort"
              >
                Uploaded on
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="scrollContainer_fea2b5v"
            style="min-height: 60px;"
          >
            <div
              class="expandableContainer_f1l0zr01"
            >
              <div
                aria-checked="false"
                class="tableRow row_f12b5y4d"
                data-row-id="run-pipeline-id"
                data-testid="table-row"
                role="checkbox"
                tabindex="-1"
              >
                <div
                  class="cell_fy8nr2z selectionToggle_f1ds3nvo"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-13 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input-16"
                        data-indeterminate="false"
                        type="checkbox"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </span>
                  <button
                    aria-label="Expand"
                    class="MuiButtonBase-root MuiIconButton-root expandButton_fcy5tjm"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10 17l5-5-5-5v10z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <div
                  class="cell_fy8nr2z"
                  style="width: 20%;"
                >
                  <a
                    class="link_f3dwag7"
                    href="/pipelines/details/run-pipeline-id"
                    title="Name: mock-pipeline-name"
                  >
                    mock pipeline name
                  </a>
                </div>
                <div
                  class="cell_fy8nr2z"
                  style="width: 60%;"
                >
                  <span>
                    mock pipeline description
                  </span>
                </div>
                <div
                  class="cell_fy8nr2z"
                  style="width: 20%;"
                >
                  9/21/2022, 1:53:59 PM
                </div>
              </div>
            </div>
            <div
              class="expandableContainer_f1l0zr01"
            >
              <div
                aria-checked="false"
                class="tableRow row_f12b5y4d"
                data-row-id="run-pipeline-id"
                data-testid="table-row"
                role="checkbox"
                tabindex="-1"
              >
                <div
                  class="cell_fy8nr2z selectionToggle_f1ds3nvo"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-13 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input-16"
                        data-indeterminate="false"
                        type="checkbox"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </span>
                  <button
                    aria-label="Expand"
                    class="MuiButtonBase-root MuiIconButton-root expandButton_fcy5tjm"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10 17l5-5-5-5v10z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <div
                  class="cell_fy8nr2z"
                  style="width: 20%;"
                >
                  <a
                    class="link_f3dwag7"
                    href="/pipelines/details/run-pipeline-id"
                    title="Name: mock-pipeline-name"
                  >
                    mock pipeline name
                  </a>
                </div>
                <div
                  class="cell_fy8nr2z"
                  style="width: 60%;"
                >
                  <span>
                    mock pipeline description
                  </span>
                </div>
                <div
                  class="cell_fy8nr2z"
                  style="width: 20%;"
                >
                  9/21/2022, 1:53:59 PM
                </div>
              </div>
            </div>
          </div>
          <div
            class="footer_f1fl9hjk"
          >
            <span
              class="fzbgmju"
            >
              Rows per page:
            </span>
            <div
              class="MuiFormControl-root MuiTextField-root verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp"
            >
              <div
                class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
              >
                <div
                  aria-haspopup="listbox"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                  role="button"
                  tabindex="0"
                >
                  10
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  tabindex="-1"
                  value="10"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
            </div>
            <button
              class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                  />
                </svg>
              </span>
            </button>
            <button
              class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="page_f1flacxk f9qqjqd"
    >
      <div
        class="pageOverflowHidden_f15djeb2"
      >
        <div>
          <div
            class="MuiFormControl-root MuiTextField-root filterBox_frxzdj2"
            spellcheck="false"
            style="height: 48px; max-width: 100%; width: 100%;"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root noMargin_fl8qkup MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
              data-shrink="true"
              for="tableFilterBox"
              id="tableFilterBox-label"
            >
              Filter pipelines
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root noLeftPadding_f106pxd4 MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
            >
              <div
                class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  style="color: rgb(128, 134, 139); padding-right: 16px;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                  />
                </svg>
              </div>
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
                id="tableFilterBox"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-9 MuiOutlinedInput-notchedOutline filterBorderRadius_f1ypp5hy"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-11 PrivateNotchedOutline-legendNotched-12"
                >
                  <span>
                    Filter pipelines
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="header_f15jqnss"
        >
          <div
            class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-13 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
            >
              <span
                class="MuiIconButton-label"
              >
                <input
                  class="PrivateSwitchBase-input-16"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
            <span
              style="display: inline-block; min-width: 40px; width: 40px;"
            />
          </div>
          <div
            class="columnName_f1kdqshe"
            style="width: 20%;"
            title="Pipeline name"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
              role="button"
              tabindex="0"
              title="Sort"
            >
              Pipeline name
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName_f1kdqshe"
            style="width: 60%;"
            title="Description"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Description
            </span>
          </div>
          <div
            class="columnName_f1kdqshe"
            style="width: 20%;"
            title="Uploaded on"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x MuiTableSortLabel-active"
              role="button"
              tabindex="0"
              title="Sort"
            >
              Uploaded on
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="scrollContainer_fea2b5v"
          style="min-height: 60px;"
        >
          <div
            class="expandableContainer_f1l0zr01"
          >
            <div
              aria-checked="false"
              class="tableRow row_f12b5y4d"
              data-row-id="run-pipeline-id"
              data-testid="table-row"
              role="checkbox"
              tabindex="-1"
            >
              <div
                class="cell_fy8nr2z selectionToggle_f1ds3nvo"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-13 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-16"
                      data-indeterminate="false"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <button
                  aria-label="Expand"
                  class="MuiButtonBase-root MuiIconButton-root expandButton_fcy5tjm"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 17l5-5-5-5v10z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <div
                class="cell_fy8nr2z"
                style="width: 20%;"
              >
                <a
                  class="link_f3dwag7"
                  href="/pipelines/details/run-pipeline-id"
                  title="Name: mock-pipeline-name"
                >
                  mock pipeline name
                </a>
              </div>
              <div
                class="cell_fy8nr2z"
                style="width: 60%;"
              >
                <span>
                  mock pipeline description
                </span>
              </div>
              <div
                class="cell_fy8nr2z"
                style="width: 20%;"
              >
                9/21/2022, 1:53:59 PM
              </div>
            </div>
          </div>
          <div
            class="expandableContainer_f1l0zr01"
          >
            <div
              aria-checked="false"
              class="tableRow row_f12b5y4d"
              data-row-id="run-pipeline-id"
              data-testid="table-row"
              role="checkbox"
              tabindex="-1"
            >
              <div
                class="cell_fy8nr2z selectionToggle_f1ds3nvo"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-13 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-16"
                      data-indeterminate="false"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <button
                  aria-label="Expand"
                  class="MuiButtonBase-root MuiIconButton-root expandButton_fcy5tjm"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 17l5-5-5-5v10z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <div
                class="cell_fy8nr2z"
                style="width: 20%;"
              >
                <a
                  class="link_f3dwag7"
                  href="/pipelines/details/run-pipeline-id"
                  title="Name: mock-pipeline-name"
                >
                  mock pipeline name
                </a>
              </div>
              <div
                class="cell_fy8nr2z"
                style="width: 60%;"
              >
                <span>
                  mock pipeline description
                </span>
              </div>
              <div
                class="cell_fy8nr2z"
                style="width: 20%;"
              >
                9/21/2022, 1:53:59 PM
              </div>
            </div>
          </div>
        </div>
        <div
          class="footer_f1fl9hjk"
        >
          <span
            class="fzbgmju"
          >
            Rows per page:
          </span>
          <div
            class="MuiFormControl-root MuiTextField-root verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp"
          >
            <div
              class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
            >
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                role="button"
                tabindex="0"
              >
                10
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                tabindex="-1"
                value="10"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
              </svg>
            </span>
          </button>
          <button
            class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
